Fix horizontalAlignContainer margin setting (incorrect string interpolation).

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -32,8 +32,8 @@
 .horizontalAlignContainer(@width) when (ispixel(@width)) { // Horizontal Align based On Container Width
 	@halfWidth: unit((unit(@width) / 2), px);
 	width: @width;
-	margin-left: e("calc(50% - @{halfWidth])");
-	margin-right: e("calc(50% - @{halfWidth])");
+	margin-left: e("calc(50% - @{halfWidth})");
+	margin-right: e("calc(50% - @{halfWidth})");
 }
 
 // #endregion
